--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,25 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.7;
+    color: #777
+}
+.header{
+    height: 95vh;
+    background-image: url(../img/hero.jpg);
+    /* where ever size the view port cover will try to fit that element */
+    background-size: cover;
+    /* this makes sure top of image is not cropped when resizing the window */
+    background-position: top;
+}
