--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,19 @@ body{
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.7;
-    color: #777
+    color: #777;
+    padding: 1.5rem; 
 }
 .header{
     height: 95vh;
-    background-image: url(../img/hero.jpg);
+    background-image: linear-gradient(
+        to right bottom,
+        rgba(126, 213, 111, 0.623),
+        rgba(40, 180, 133, 0.76)),
+        url(../img/hero.jpg);
     /* where ever size the view port cover will try to fit that element */
     background-size: cover;
     /* this makes sure top of image is not cropped when resizing the window */
     background-position: top;
+    clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
 }
