--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
     padding: 1.5rem; 
 }
 .header{
+    position: relative;
     height: 95vh;
     background-image: linear-gradient(
         to right bottom,
@@ -33,4 +34,28 @@ body{
     /* this makes sure top of image is not cropped when resizing the window */
     background-position: top;
     clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
+}
+.logo-box{
+    position: absolute;
+    top:2.5rem;
+    left:2.55rem;
+}
+.logo{
+    height: 2.2rem;
+}
+.heading-primary{
+    color:#fff;
+    text-transform: uppercase;
+}
+.heading-primary-main{
+    display:block;
+    font-size: 3.8rem;
+    font-weight: 400;
+    letter-spacing: 2rem;
+}
+.heading-primary-sub{
+    display:block;
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: 1rem;
 }
