--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,12 @@ body{
     background-position: top;
     clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
 }
+.text-box{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
 .logo-box{
     position: absolute;
     top:2.5rem;
@@ -52,10 +58,28 @@ body{
     font-size: 3.8rem;
     font-weight: 400;
     letter-spacing: 2rem;
+
+    animation-name: moveInaLeft;
+    animation-duration: 3s;
 }
 .heading-primary-sub{
     display:block;
     font-size: 1.6rem;
     font-weight: 700;
     letter-spacing: 1rem;
+}
+
+@keyframes moveInLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80%{
+        opacity: 0;
+        transform: translateX(20);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
