--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,9 @@ body{
     text-transform: uppercase;
     padding:1rem 2.5rem;
     display: inline-block;
+    border-radius: 6.25rem;
+    transition: all .03s;
+    position: relative;
 }
 .btn-white{
     background: #fff;
@@ -123,8 +126,32 @@ body{
 }
 .btn:hover{
     transform:translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.331);
 }
 /* when we click on an element */
 .btn:active{
-    transform:translateY(-1);
+    transform:translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.131);
+}
+.btn::after{
+    /* content and display are mandatory */
+    content:'';
+    display:inline-block;
+    height:100%;
+    width:100%;
+    border-radius: 6.25rem;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    z-index: -1;
+    transition: all .4s;
+}
+.btn-white::after{
+    background: #fff;
+}
+.btn:hover::after{
+    /* content and display are mandatory */  
+  transform: scale(1.5);
+  /*.btn::after has transition and this will take .04s for opacity to reach 0  */
+  opacity:0;
 }
