--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ body{
 }
 @keyframes moveInBottom {
     0%{
+        opacity: 0;
         transform: translateY(100px);
     }
     100%{
@@ -164,8 +165,10 @@ body{
   /*.btn::after has transition and this will take .04s for opacity to reach 0  */
   opacity:0;
 }
-btn-animated {
+.btn-animated {
     /* name,duration,effect,delay */
     /* not driving every day this helps you remember wher the properties go */
-    animation: moveInBottom .5s ease-out .75s;
+    animation: moveInBottom .75s ease-in .75s;
+    /* I have a delay on  my animation that is Why i use fill-mode to apply the style on keyframe */
+    animation-fill-mode: backwards;
 }
