--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,15 @@
+@import "abstracts/fuctions";
+@import "abstracts/mixins";
+@import "abstracts/vaiables";
+
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "pages/home";
+
+
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
