--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,62 +7,14 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "component/button";
+
+@import "layout/header";
+
 @import "pages/home";
 
-.header {
-    position: relative;
-    height: 95vh;
-    background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.623), rgba($color-primary-dark, 0.76)), url(../img/hero.jpg);
-    /* where ever size the view port cover will try to fit that element */
-    background-size: cover;
-    /* this makes sure top of image is not cropped when resizing the window */
-    background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    &_text-box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-    &_logo-box {
-        position: absolute;
-        top: 2.5rem;
-        left: 2.55rem;
-    }
-    &_logo {
-        height: 2.2rem;
-    }
-}
 
-.heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    /* THIS IS A HACK THAT FIXES THE SHACKING ON THE ANIMATION */
-    backface-visibility: hidden;
-    margin-bottom: 3rem;
-    &-main {
-        display: block;
-        font-size: 3.8rem;
-        font-weight: 400;
-        letter-spacing: 2rem;
-        animation-name: moveInLeft;
-        animation-duration: 2s;
-        animation-timing-function: ease-out;
-        /* 
-        animation-delay: 3s wait 3seconds then start 
-        animation-iteration-count: 3; happens 3 times
-        animation-timing-function: ease-in;
-        */
-    }
-    &-sub {
-        display: block;
-        font-size: 1.2rem;
-        font-weight: 700;
-        letter-spacing: 1rem;
-        animation: moveInRight 2s ease-out;
-        /* animation-name: moveInRight; */
-    }
-}
+
+
 
 
