--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,15 +4,10 @@
 *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
-    line-height: 1.7;
-    color: $color-gray-dark;
-    padding: 1.5rem;
+    box-sizing: border-box;
 }
 
