--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,3 +29,12 @@
         /* animation-name: moveInRight; */
     }
 }
+
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.7;
+    color: $color-gray-dark;
+    padding: 1.5rem;
+}
