grid layout variable created

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,3 +14,10 @@ $color-primary-dark: #28b485;
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+$color-light-gray: #eee;
+
+
+
+// GRID LAYOUT
+$grid-width: 71.25rem;
+$gutter-vertical: 5rem;
