--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,4 +1,9 @@
-.row{
+.row {
     // width 1140 px
-    width:71.25rem
+    max-width: $grid-width;
+    background-color: $color-light-gray;
+    margin: 0 auto;
+    &:not(:last-child) {
+        margin-bottom: $gutter-vertical;
+    }
 }
