--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,4 +6,14 @@
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
     }
+    @include clearfix;
+    // #{} to use variables in the calc function
+    .col-1-0f-2{
+        width:calc((100% - #{$gutter-horizontal})/2);
+        background-color: orangered;
+        float: left;
+        &:not(:last-child){
+            margin-right: $gutter-horizontal;
+        }
+    }
 }
