--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,7 +6,7 @@
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
     }
-    [class^=col-] {
+    [class^="col-"] {
         background-color: orangered;
         float: left;
         &:not(:last-child) {
@@ -17,7 +17,8 @@
     .col-1-0f-2 {
         width:calc((100% - #{$gutter-horizontal})/2);
     }
+    // don't forget spaces between + * / -
     .col-1-0f-3 {
-        width:calc((100%- 2*#{$gutter-horizontal})/2)
+        width:calc((100% - 2 * #{$gutter-horizontal})/3);
     }
 }
