about section created

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -38,3 +38,11 @@ body {
     color: $color-gray-dark;
     padding: 1.5rem;
 }
+
+.heading-secondary{
+    font-size: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    display:inline-block;
+    background-image: linear-gradient()
+}
