--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,9 @@ Dark green:$color-primary-dark
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
+$color-grey-light-1:#f7f7f7;
+
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
