--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -21,6 +21,8 @@
     .col-1-0f-3 {
         width:calc((100% - 2 * #{$gutter-horizontal})/3);
     }
+    // english:this code is saying take 100% of container and subtract
+    // right margin which are the space between columns the remaning value is divided by number of element in the row
     .col-1-0f-4 {
         width:calc((100% - 3 * #{$gutter-horizontal})/4);
     }
@@ -33,4 +35,4 @@
     .col-3-0f-4 {
         width:calc(3 * ((100% - 3 * #{$gutter-horizontal})/4) + 2 * #{$gutter-horizontal} );
     }
-}
+} 
