--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -7,32 +7,31 @@
         margin-bottom: $gutter-vertical;
     }
     [class^="col-"] {
-        background-color: orangered;
         float: left;
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
         }
     }
     @include clearfix; // #{} to use variables in the calc function
-    .col-1-0f-2 {
+    .col-1-of-2 {
         width:calc((100% - #{$gutter-horizontal})/2);
     }
     // don't forget spaces between + * / -
-    .col-1-0f-3 {
+    .col-1-of-3 {
         width:calc((100% - 2 * #{$gutter-horizontal})/3);
     }
     // english:this code is saying take 100% of container and subtract
     // right margin which are the space between columns the remaning value is divided by number of element in the row
-    .col-1-0f-4 {
+    .col-1-of-4 {
         width:calc((100% - 3 * #{$gutter-horizontal})/4);
     }
-    .col-2-0f-3 {
+    .col-2-of-3 {
         width:calc(2 * ((100% - 2 * #{$gutter-horizontal})/3) + #{$gutter-horizontal} );
     }
-    .col-2-0f-4 {
+    .col-2-of-4 {
         width:calc(2 * ((100% - 3 * #{$gutter-horizontal})/4) + #{$gutter-horizontal} );
     }
-    .col-3-0f-4 {
+    .col-3-of-4 {
         width:calc(3 * ((100% - 3 * #{$gutter-horizontal})/4) + 2 * #{$gutter-horizontal} );
     }
 } 
