button created for the about section

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -53,3 +53,20 @@
         animation-fill-mode: backwards;
     }
 }
+.btn-text{
+    &:link,
+    &:visited {
+        color: $color-primary;
+        text-decoration: none;
+        text-transform: uppercase;
+        padding: 3px;
+        display: inline-block;
+        transition: all .03s;
+    }
+    &:hover{
+
+    }
+    &:active{
+
+    }
+}
