--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,6 +2,12 @@
     //<!-- inline block treat like text and can be center -->
     text-align:center;
 }
-.u-margin-bottom-8{
-    margin-bottom: 7rem
+.u-margin-bottom-small{
+    margin-bottom: 1rem
+};
+.u-margin-bottom-medium{
+    margin-bottom: 2rem
+};
+.u-margin-bottom-big{
+    margin-bottom: 6rem
 };
