--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,6 +2,7 @@
 .btn {
     &:link,
     &:visited {
+        font-size: $default-font-size;
         text-decoration: none;
         text-transform: uppercase;
         padding: 1rem 2.5rem;
@@ -56,17 +57,23 @@
 .btn-text{
     &:link,
     &:visited {
+        font-size: $default-font-size;
         color: $color-primary;
         text-decoration: none;
         text-transform: uppercase;
         padding: 3px;
         display: inline-block;
+        border-bottom: 1px solid $color-primary;
         transition: all .03s;
     }
     &:hover{
-
+        background-color:$color-primary;
+        color:$color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.151);
+        transform: translateY(-2px);
     }
     &:active{
-
+        box-shadow: 0 .5rem 1rem rgba($color-black, 0.151);
+        transform: translateY(0);
     }
 }
