--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/compositon";
 
 @import "layout/grid";
 @import "layout/header";
