--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -49,11 +49,11 @@ body {
     background-clip: text;
     color: transparent;//this is shorthand for rgba(0,0,0,0) you this to see background 
     letter-spacing: 2px;
-    transition: all .3s;
+    transition: all .8s;
 
     &:hover{
         transform: skewY(1.7deg) skewX(15deg) scale(1.1);
-        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+        box-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
 }
 
