--- a/sass/components/compositon.scss
+++ b/sass/components/compositon.scss
@@ -1,5 +1,23 @@
-.compositon{
-    &_photo{
-        
+.compositon {
+    position: relative;
+    &_photo {
+        width: 55%;
+        box-shadow: 0 1rem 2rem rgba($color-black, .4);
+        border-radius: 2px;
+        position: absolute;
+
+        &--p1 {
+            left:0 ;
+            top: -2rem;
+        }
+        &--p2 {
+            right: 0;
+            top: 2rem;
+        }
+        &--p3 {
+            left: 20%;
+            top: 10rem;
+        }
     }
+
 }
