--- a/sass/components/compositon.scss
+++ b/sass/components/compositon.scss
@@ -5,6 +5,9 @@
         box-shadow: 0 1rem 2rem rgba($color-black, .4);
         border-radius: 2px;
         position: absolute;
+        z-index: 10;
+        transition: all .2s;
+        outline-offset: 1.6rem;
 
         &--p1 {
             left:0 ;
@@ -18,6 +21,16 @@
             left: 20%;
             top: 10rem;
         }
-    }
+        &:hover{
+            outline: 1.2rem solid $color-primary;
+            transform: scale(1.05) translateY(-2rem);
+            box-shadow: 0 2.5rem 4rem rgba($color-black, .6);
+            z-index: 22;
 
+        }
+        
+    }
+    &:hover &_photo:not(:hover){
+        transform: scale(.9);
+    }
 }
