--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,9 @@
 @import "components/button";
 @import "components/compositon";
 
+@import "components/feature_box";
+
+
 @import "layout/grid";
 @import "layout/header";
 
