--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,14 +9,13 @@
 
 @import "components/button";
 @import "components/compositon";
-
-@import "components/feature_box";
+@import "components/feature-box";
 
 
 @import "layout/grid";
 @import "layout/header";
 
-@import "pages/home"; 
+@import "pages/home";  
   
 
 
