--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -24,6 +24,6 @@ $default-font-size:1rem;
 
 
 // GRID LAYOUT
-$grid-width: 71.25rem;
+$grid-width: 81.25rem; //experinment with 73rem 81rem is perfect
 $gutter-vertical: 5rem;
-$gutter-horizontal:2.5rem;
+$gutter-horizontal:2.3rem;
