--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,9 +5,15 @@
 }
 
 .section-features{
-    padding:20rem 0;
+    padding:12.5rem 0;
     background-image: linear-gradient( to right bottom, 
     rgba($color-primary-light, 0.623), 
-    rgba($color-primary-dark, 0.76)), url(../img/nat.jpg);
+    rgba($color-primary-dark, 0.76)), url(../img/nat-4.jpg);
     background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -9rem;
+
+    & > *{
+        transform: skewY(7deg);
+    }
 }
