card component created

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,3 +17,10 @@
         transform: skewY(7deg);
     }
 }
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 22rem 0 46rem 0;
+    margin-top: -9rem;
+
+}
