--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $color-tertiary-light: #5643fa;
 
 
 $color-grey-light-1:#f7f7f7;
+$color-grey-light-2:#eee;
 
 $color-gray-dark: #777;
 $color-white: #fff;
