--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,7 @@
     background-size: cover;
     /* this makes sure top of image is not cropped when resizing the window */
     background-position: top;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     &_text-box {
         position: absolute;
