--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,6 +22,13 @@
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
         }
     }
     &:hover &_side--front {
@@ -62,7 +69,20 @@
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
         &--1 {
-            background-image: linear-gradient( to right bottom, rgba($color-secondary-light, 0.88), rgba($color-secondary-dark, 0.89));
+            background-image: linear-gradient( to right bottom, 
+            rgba($color-secondary-light, 0.88), 
+            rgba($color-secondary-dark, 0.89));
+        }
+        &--2 {
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-primary-light, .85), 
+            rgba($color-primary-dark, .85));
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-tertiary-light, .85), 
+            rgba($color-tertiary-dark, .85));
         }
     }
     &_details {
