--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,14 +11,14 @@
 @import "components/card";
 @import "components/compositon";
 @import "components/feature-box";
-
+@import "components/story";
 
 @import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";  
-  
-
+   
+ 
 
 
 
