--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -35,7 +35,8 @@
 
 
 .section-book {
-    padding: 15rem 0;
+    padding: 12.5rem 6rem;//original setting padding: 15rem 0;
+
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 
     // @include respond(tab-port) {
@@ -43,15 +44,19 @@
     // }
 }
 
-// .book {
-//     background-image: linear-gradient(105deg, 
-//                                     rgba($color-white, .9) 0%,
-//                                     rgba($color-white, .9) 50%,
-//                                     transparent 50%) ,
-//                             url(../img/nat-10.jpg);
-//     background-size: 100%;
-//     border-radius: 3px;
-//     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+.book {
+    background-image: linear-gradient(105deg, 
+                                    rgba($color-white, .9) 0%,
+                                    rgba($color-white, .9) 50%,
+                                    transparent 50%) ,
+                            url(../img/nat-10.jpg);
+    background-size: 100%;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+    height: 45rem;//test
+    background-size: cover;//test delete
+
 
 //     @include respond(tab-land) {
 //         background-image: linear-gradient(105deg, 
@@ -69,16 +74,17 @@
 // url(../img/nat-10.jpg);
 //     }
 
-//     &__form {
-//         width: 50%;
-//         padding: 6rem;
+    &__form {
+        //this is the container of the form
+        width: 50%;
+        padding: 6rem;
 
-//         @include respond(tab-land) {
-//             width: 65%;
-//         }
+    //     @include respond(tab-land) {
+    //         width: 65%;
+    //     }
 
-//         @include respond(tab-port) {
-//             width: 100%;
-//         }
-//     }
-// }
+    //     @include respond(tab-port) {
+    //         width: 100%;
+    //     }
+    }
+}
