--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,14 +12,16 @@
 @import "components/card";
 @import "components/compositon";
 @import "components/feature-box";
+@import "components/form";
 @import "components/story";
 
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
 @import "pages/home";  
    
- 
+
 
 
 
