colors add to variables.scss these are temporary fix and will be modified again

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -41,3 +41,30 @@ $default-font-size:1rem;
 $grid-width: 82.25rem; //experinment with 73rem 81rem is perfect
 $gutter-vertical: 5rem;
 $gutter-horizontal:2.3rem;
+
+
+
+
+
+//catch all routes for the colors this whole file will be modified in the future
+// COLORS
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+$color-grey-dark: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
+$color-white: #fff;
+$color-black: #000;
+
