--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,8 +6,41 @@
     padding: 0;
     box-sizing: inherit;
 }
+html {
+    //oder of media quieries important always large ones before smaller ones
+    // This defines what 1rem is
+    font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+
+    @include respond(tab-land) { // width < 1200?
+        font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    }
+
+    @include respond(tab-port) { // width < 900?
+        font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    }
+    
+    @include respond(big-desktop) {
+        font-size: 75%; //1rem = 12, 12/16
+    }
+}
 
 body {
     box-sizing: border-box;
+    padding: 1.5rem;
+
+    @include respond(tab-port) {
+        //remove white padding around page on tablets
+        padding:0;
+    }
+
 }
 
+// html{
+    // font-size: 62.5%;//I change default 1rem equals 10px  calculation i used 10px/16px =62.5
+//     @include respond-phone(phone){
+//         font-size: 50%;
+//     }
+//     @include respond(phone){
+//         font-size: 50%;
+//     }
+// }
