--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,6 +6,7 @@
     /* THIS IS A HACK THAT FIXES THE SHACKING ON THE ANIMATION */
     backface-visibility: hidden;
     margin-bottom: 3rem;
+  
     &-main {
         display: block;
         font-size: 3.8rem;
@@ -19,6 +20,11 @@
         animation-iteration-count: 3; happens 3 times
         animation-timing-function: ease-in;
         */
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 3rem;
+
+        }
     }
     &-sub {
         display: block;
@@ -27,6 +33,9 @@
         letter-spacing: 1rem;
         animation: moveInRight 2s ease-out;
         /* animation-name: moveInRight; */
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -36,7 +45,7 @@ body {
     font-size: 1rem;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 1.5rem;
+    // padding: 1.5rem; move to bass.scss
 }
 
 .heading-secondary{
@@ -50,7 +59,12 @@ body {
     color: transparent;//this is shorthand for rgba(0,0,0,0) you this to see background 
     letter-spacing: 1.5px;
     transition: all .8s;
-
+    @include respond(tab-port) {
+        font-size: 1.7rem;
+    }
+    @include respond(phone) {
+        font-size: 1.2rem;
+    }
     &:hover{
         transform: skewY(1.7deg) skewX(15deg) scale(1.1);
         box-shadow: .5rem 1rem 2rem rgba($color-black, .2);
