--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -11,6 +11,12 @@
         float: left;
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+            @include respond(tab-port) {
+                margin-right: 0;
+            }
+        }
+        @include respond(tab-port) {
+            width:100%
         }
     }
     @include clearfix; // #{} to use variables in the calc function
